--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Supriya Rao Gude
-#logo: /assets/img/headshot_circle.png
+logo: /Images/fotor-20240430185620.png
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
