--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ email: supriyar.gude@gmail.com
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
+baseurl: ""
+url: "https://raosg10.github.io"
+show_downloads: false
